--- a/src/scss/sections/_intro.scss
+++ b/src/scss/sections/_intro.scss
@@ -8,6 +8,10 @@
     width: 50%;
   }
 
+  & .intro-message {
+    font-size: 1.8rem;
+  }
+
   & .section-header-img-wrapper {
     max-width: 400px;
     margin-bottom: 3rem;
