--- a/src/scss/sections/_about.scss
+++ b/src/scss/sections/_about.scss
@@ -4,22 +4,39 @@
 
 #about {
   @extend %article-wrapper;
-  padding-right: 5%;
+  flex-direction: column;
+  font-size: 1.6rem;
+  padding-bottom: 80px;
+  margin-top: 120px;
+
+  & .section-header-img-wrapper {
+    width: 70%;
+    max-width: 190px;
+  }
 
   & .section-header {
-    width: 25%;
-    position: relative;
+    position: absolute;
+    top: 16vh;
+    left: 0;
+  }
 
-    & .section-header-img-wrapper {
-      width: 70%;
-      max-width: 190px;
-    }
+  &.scrolling-this .section-header {
+    position: fixed;
+  }
+
+  &.scrolled-this .section-header {
+    position: absolute;
+    top: auto;
+    bottom: 24vh;
   }
 
   & .article-body {
-    height: 85%;
-    justify-content: space-between;
-    align-items: flex-start;
+    width: 75%;
+    margin-left: 25%;
+    align-items: stretch;
+    justify-content: flex-start;
+    padding-right: 20%;
+    padding-left: 5%;
     flex-direction: column;
   }
 
@@ -40,9 +57,7 @@
 
   & .about-interest {
     display: flex;
-    width: 70%;
     margin-bottom: 5rem;
-    margin-left: 15%;
     align-items: center;
 
     &:nth-child(even) {
@@ -59,7 +74,7 @@
 
   & .about-interest-image {
     margin: 0 3rem;
-    min-width: 30%;
+    min-width: 21%;
     text-align: center;
 
     & img {
@@ -70,25 +85,16 @@
   & .about-interest-content {
   }
 
-  & .article-column {
-    width: 31%;
-    padding-top: 37rem;
-    position: relative;
-  }
-
-
-  & .article-column-central {
-    @extend .article-column;
-    padding-top: 15rem;
-
-    & .about-interest-title-main {
-      text-align: center;
-      position: static;
-    }
-  }
 
   & .interest-button {
     @include make-button();
+  }
+
+  & .about-intro {
+    font-size: 1.8rem;
+    margin-bottom: 4rem;
+    text-align: center;
+    width: 100%;
   }
 
   & .about-interest-title {
@@ -97,21 +103,28 @@
   }
 
   & .about-interest-title-main {
-    font-size: 3.6rem;
+    font-size: 3.8rem;
     font-family: $font-family-work-sans-thin;
-    line-height: 1;
-    margin-bottom: 3rem;
-    margin-top: 3rem;
-    position: absolute;
-    top: 27rem;
-    left: 34.4%;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 2rem;
   }
 
   & .about-photo {
-    margin: auto;
+    margin: 0 auto 3rem auto;
     position: relative;
     left: 10px;
     width: 100%;
-    max-width: 443px;
+    max-width: 400px;
+  }
+
+  &.scrolling-this .section-header {
+    position: fixed;
+  }
+
+  &.scrolled-this .section-header {
+    position: absolute;
+    top: auto;
+    bottom: 24vh;
   }
 }
