--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@
 @import "sections/skills";
 @import "sections/portfolio";
 @import "sections/experience";
+@import "sections/references";
 @import "sections/about";
 @import "sections/contact";
 @import "sections/outro";
